# practix-fileapi

./: .gitattributes  .gitignore  Makefile  README.md  dc-debug.yml  docker-compose.yml
django/: .env  Dockerfile  README.md  entrypoint.sh  requirements.txt
etl/: .dockerignore  .env  Dockerfile  data.py  etl.py  extraction.py  loading.py  main.py  requirements.txt  state.py  storage.py  transformation.py
fastapi-solution/: api.env  docker-compose.yml
fileapi/: Dockerfile  Makefile  README.md  api.env  dc-debug.yml  docker-compose.yml  entrypoint.sh  fileapi_dc-debug.yml  pyproject.toml  requirements.txt
fileapi/alembic/: Dockerfile  alembic.ini
fileapi/alembic/migrations/versions/: cd6f2ad9daf6_.py
fileapi/api/: Dockerfile  main.py  model.py  requirements.txt
fileapi/pg-db/: .env
fileapi/pg-db/init_pg/: fileapi_db.sql
fileapi/src/: alembic.ini  dependencies.py  fileapi_dependencies.py  main.py
fileapi/src/api/v1/: files.py
fileapi/src/core/: config.py  logger.py
fileapi/src/db/: minio.py  postgres.py
fileapi/src/dependencies/: main.py
fileapi/src/dependencies/services/: __init__.py  file_properties_service_factory.py  file_service_factory.py  minio_service_factory.py
fileapi/src/fileapi/v1/: files.py
fileapi/src/migrations/: env.py
fileapi/src/migrations/versions/: f25bb935b7af_initial_migration.py
fileapi/src/models/: file.py  file_properties.py
fileapi/src/service/: base.py  file.py
fileapi/src/services/: base.py  file.py  file_properties.py  minio.py  s3.py
fileapi/src/tests/: conftest.py  test_fileapi.py
nginx/: Dockerfile
(+95 files in other folders)
