[tool.poetry]
name = "fileapi"
version = "0.1.0"
description = "S3 file storage api"
authors = ["Vasiliy Ivanov <shitcoder@pm.me>", "Vera Kaynara <vera.blinova.1996@gmail.com>", "Sergey Kiselev <vvh1te@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofile = "^3.8.8"
aiohttp = "^3.9.1"
aiosignal = "^1.3.1"
annotated-types = "^0.6.0"
fastapi = "^0.105.0"
miniopy-async = "^1.18"
pydantic = "^2.5.2"
pydantic-core = "^2.14.5"
sqlalchemy = "^2.0.23"
gunicorn = "^21.2.0"
uvicorn = "^0.25.0"
orjson = "^3.9.10"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
alembic = "^1.13.1"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
shortuuid = "^1.0.11"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
